base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-mobility-cpp
  labels:
    app.kubernetes.io/name: smart-mobility-dashboard-cpp
    app.kubernetes.io/part-of: smart-mobility-cpp
